# AiNex_pick_place

./: .gitignore  CMakeLists.txt  GIT_INSTRUCTIONS.md  QUICKSTART.md  README.md  auto_pick_place.py  dhurandhar_final.d6a  launch.sh  package.xml  run_game.sh
launch/: interactive_game.launch
scripts/: interactive_game.py  interactive_game.py.backup  interactive_game_final.py
